<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EA96B2"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/divide"
        android:layout_width="80dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/divide"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minus" />

    <Button
        android:id="@+id/multi"
        android:layout_width="80dp"
        android:layout_height="65dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="20dp"
        android:text="@string/multi"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divide" />

    <Button
        android:id="@+id/button3"
        android:layout_width="80dp"
        android:layout_height="110dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/_3"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dot"
        app:layout_constraintEnd_toStartOf="@+id/multi" />

    <Button
        android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="110dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="136dp"
        android:text="@string/_2"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3" />

    <Button
        android:id="@+id/dot"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="44dp"
        android:text="@string/dot"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="110dp"
        android:layout_alignEnd="@+id/button4"

        android:layout_marginEnd="4dp"


        android:layout_marginBottom="136dp"
        android:text="@string/_1"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2" />

    <Button
        android:id="@+id/minus"
        android:layout_width="80dp"
        android:layout_height="65dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:text="@string/minus"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edit"
        android:layout_width="0dp"
        android:layout_height="138dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/space"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="viewEnd"
        android:textColor="@color/teal_700"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081"
        tools:ignore="SpeakableTextPresentCheck"
        tools:text="  " />

    <Button
        android:id="@+id/button7"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="110dp"
        android:layout_alignEnd="@+id/button4"


        android:layout_marginTop="28dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:background="#DD8383"
        android:backgroundTint="#DA8888"
        android:text="@string/_7"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/edit"
        app:layout_constraintVertical_bias="0.948"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button8"
        android:layout_width="80dp"
        android:layout_height="110dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="4dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:text="@string/_8"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/edit"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button9"
        android:layout_width="80dp"
        android:layout_height="110dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/_9"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/del" />

    <Button
        android:id="@+id/button4"
        android:layout_width="80dp"
        android:layout_height="110dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/_4"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="80dp"
        android:layout_height="110dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/_5"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button6" />

    <Button
        android:id="@+id/button6"
        android:layout_width="80dp"
        android:layout_height="110dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/_6"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/minus" />

    <Button
        android:id="@+id/plus"
        android:layout_width="80dp"
        android:layout_height="65dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="20dp"
        android:text="@string/plus"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/del" />

    <Button
        android:id="@+id/del"
        android:layout_width="80dp"
        android:layout_height="65dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:text="@string/del"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/equal"
        android:layout_width="80dp"
        android:layout_height="65dp"
        android:layout_marginEnd="20dp"
        android:text="@string/equal"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multi"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button0"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_0"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/dot"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>
